--- a/FW-Backend/package.json
+++ b/FW-Backend/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "key-file-storage": "^2.1.5",
-    "object-sizeof": "^1.3.1"
+    "object-sizeof": "^1.3.1",
+    "process": "^0.11.10"
   }
 }
